--- a/myrules.ini
+++ b/myrules.ini
@@ -14,7 +14,7 @@ rename_node=广佬专属节点@Nearoute
 custom_proxy_group=!!import:https://raw.githubusercontent.com/alanzsw/rules/main/myrules.txt
 clash_rule_base=https://raw.githubusercontent.com/alanzsw/rules/main/myrules.yml
 
-exclude_remarks=(Expire|Traffic|官网|备用|重置|流量|到期|套餐|剩余|工作室|请|全局代理|忘记|海外|续费|油佬)
+exclude_remarks=(Expire|Traffic|官网|备用|重置|流量|到期|套餐|剩余|工作室|请|全局代理|忘记|海外|续费|油佬|临时|S2|Air|Std)
 
 udp=true
 sort=true
