--- a/myrules.ini
+++ b/myrules.ini
@@ -10,11 +10,17 @@ rename_node=德国 @DE-
 rename_node=韩国 @KR-
 rename_node=Premium@Pre
 rename_node=广佬专属节点@Nearoute
+rename_node=IEPL @
+rename_node=[06] @
+rename_node=[05] @
+rename_node=[03] @
+rename_node=[Pro]@Pro
+
 
 custom_proxy_group=!!import:https://raw.githubusercontent.com/alanzsw/rules/main/myrules.txt
 clash_rule_base=https://raw.githubusercontent.com/alanzsw/rules/main/myrules.yml
 
-exclude_remarks=(Expire|Traffic|官网|备用|重置|流量|到期|套餐|剩余|工作室|请|全局代理|忘记|海外|续费|油佬|临时|S2|Air|Std)
+exclude_remarks=(Expire|Traffic|官网|备用|重置|流量|到期|套餐|剩余|工作室|请|全局代理|忘记|海外|续费|油佬|临时|S2|Air|Std|AC|DE|UK)
 
 udp=true
 sort=true
