--- a/myrules.ini
+++ b/myrules.ini
@@ -13,6 +13,7 @@ rename_node=广佬专属节点@Nearoute
 rename_node=IEPL @
 rename_node=[06] @
 rename_node=[05] @
+rename_node=[04] @
 rename_node=[03] @
 rename_node=[Pro]@Pro
 
